fixes balances not showing up for eth tokens with more than 9 decimals (#151)
* fixed button with no provider

* fixes balances not showing up for eth tokens with more than 9 decimals

* added warning popover

--- a/packages/bridge/src/components/Input/style.less
+++ b/packages/bridge/src/components/Input/style.less
@@ -182,7 +182,7 @@
   }
 }
 
-.dashed-input-container.right {
+.dashed-input-container {
   & > button.ant-btn:not(.ant-dropdown-trigger) {
     text-transform: uppercase;
     color: white;
