--- a/packages/bridge/src/components/Transfer/style.less
+++ b/packages/bridge/src/components/Transfer/style.less
@@ -6,7 +6,12 @@
   align-items: center;
   margin-bottom: 10px;
 }
-
+.ant-popover-title {
+  text-align: right;
+}
+.ant-popover-inner-content {
+  text-align: center;
+}
 .swap-button {
   border-radius: 2em;
   width: 60px;
